# buildtest

./: .all-contributorsrc  .codecov.yml  .coveragerc  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .shellcheckrc  .spellcheck.yaml  .spellcheck.yml  .swp  .travis.yml  .travis.yml.DELETE  .wordlist.txt  .yamllint.yml  .zenodo.json  ALL-CONTRIBUTORS.md  CHANGELOG.rst  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  COPYRIGHT  COPYRIGHT.LBNL  LEGAL.txt  LICENSE  MANIFEST.in  README  README.md  README.rst  SECURITY.md  _buildtest  auto_write_tests.sh  bash_completion.sh  buildtest  buildtest.py  buildtest_regtest.py  check.sh  (+34 more)
.github/: FUNDING.yml  dependabot.yml  issue_label_bot.yaml  stale.yml  trafico.yml
.gitlab/: ascent.yml  cori.yml  jlse.yml  nersc.yml  olcf.yml
CMake/: CMakeLists.txt
CUDA/: CMakeLists.txt
MPICH/: CMakeLists.txt
OpenMPI/: CMakeLists.txt
Python/: CMakeLists.txt
aws_oddc/: sleep.yml
aws_tutorial/: mpi_job_submission.yml  mpiproc.yml  openmp_example_custom_compiler.yml  openmp_hello.c  osu_bandwidth_test.yml  osu_bandwith_test.yml  tensor_model.py  tensorflow.yml
buildtest/: __init__.py  buildtest  config.py  config_schema.json  defaults.py  docs.py  exceptions.py  log.py  main.py  module.py  modules.py  runtest.py  settings.json  settings.yml  spider.py  system.py
cdash/: CDASH  README  README.md  cdash.conf.in  config.local.php  php.ini
docs/: Architecture.rst  Automate_BatchJobs.rst  BinaryTest_Yaml_Application.rst  BinaryTest_Yaml_SystemPackages.rst  Build_Operations.rst  Buildtest_Variables.rst  Command_Reference.rst  EasyBuild_Integration.rst  Find_Operations.rst  How_to_use_BuildTest.rst  Job_Template.rst  Jobscript_yaml_configuration.rst  List_Subcommand.rst  Makefile  Module_Operations.rst  Pipfile  README.md  README.rst  Run_Subcommand.rst  Setup.rst  Show_Configuration.rst  What_is_buildtest.rst  Writing_Test_In_YAML.rst  Yaml_Subcommand.rst  _definitions-definitions-bsub-items.md  _definitions-definitions-bsub.md  _definitions-definitions-description.md  _definitions-definitions-env-items-propertynames.md  _definitions-definitions-env-items.md  _definitions-definitions-env.md  _definitions-definitions-executor.md  _definitions-definitions-sbatch-items.md  _definitions-definitions-sbatch.md  _definitions-definitions-skip.md  _definitions-definitions-status-properties-regex-properties-exp.md  _definitions-definitions-status-properties-regex-properties-stream.md  _definitions-definitions-status-properties-regex-properties.md  _definitions-definitions-status-properties-regex.md  _definitions-definitions-status-properties-returncode-items.md  _definitions-definitions-status-properties-returncode.md  (+201 more)
examples/: collection.py  moduletest.py  saving_collection.py  spider_example.py  test.yml
framework/: env.py  main.py  master.py  modules.py  runtest.py  testgen.py
git/: CMakeLists.txt
ifort/: CMakeLists.txt
impi/: CMakeLists.txt
parser/: args.py  functions.py  parser.py
python/: buildtest.py  modules.py  process_easyconfig.py  setup.py  testgen.py  utilities.py
schema_docs/: compiler-v1-properties-build-properties-cc.md  compiler-v1-properties-build-properties-cflags.md  compiler-v1-properties-build-properties-fflags.md  compiler-v1-properties-build-properties.md  compiler-v1-properties-build.md  compiler-v1-properties-executor.md  compiler-v1-properties-run-properties-launcher.md  compiler-v1-properties-type.md  definitions-definitions-int_or_list.md  definitions-definitions-list_of_ints.md  definitions-definitions-sbatch-items.md  definitions-definitions-sbatch.md  definitions-definitions-skip.md  definitions-definitions-status-properties-regex-properties-exp.md  definitions-definitions-status-properties-regex-properties.md  definitions-definitions-string_or_list-oneof-0.md  global-properties-buildspecs-propertynames.md  global-properties-maintainers.md  global-properties.md  global.md  python-v1-properties-module-items.md  python-v1-properties-package-properties-pypi-items.md  python-v1-properties-package-properties-requirements.md  python-v1-properties-package-properties.md  python-v1-properties-package.md  python-v1-properties-pyver-items.md  python-v1-properties-pyver.md  python-v1-properties-script.md  python-v1-properties-tags.md  python-v1-properties.md  script-v1-properties-shell.md  settings-definitions-local-properties-shell.md  settings-definitions-local.md  settings-definitions-lsf-properties-before_script.md  settings-definitions-lsf-properties-launcher.md  settings-definitions-lsf-properties-options-items.md  settings-definitions-lsf-properties-options.md  settings-definitions-lsf.md  settings-definitions-modules-properties-load-items.md  settings-definitions-modules.md  (+27 more)
schemas/: _definitions.schema.json  compiler-v1.0.schema.json  definitions.schema.json  global.schema.json  script-v1.0.schema.json
scripts/: Dockerfile  docgen.py  pbs.sh  regtest.py  regtest.sh  run_scripts.sh
settings/: config.yml
source/: setup.sh
src/: main.py
template/: base.sh  generic.sh  generic.txt  job.slurm  mpi-build.txt  mpi.sh  serial-build.txt
testmodules/: testsets.py
tests/: run_tests.sh  test_ascent.py  test_build.py  test_buildsystem.py  test_command.py  test_config.py  test_config_file.py  test_cori.py  test_defaults.py  test_docs.py  test_exceptions.py  test_file.py  test_inspect.py  test_jlse.py  test_log.py  test_module_collection.py  test_module_tree.py  test_modules.py  test_nersc.py  test_pbs.py  test_stats.py  test_summit.py  test_testconfigs.py  test_torque.py
toolkit/: CONTRIBUTING.rst  README.rst
tools/: cmake.py  file.py  generic.py
tutorials/: add_numbers.yml  burstbuffer_datawarp_executors.yml  csh_shell_examples.yml  dummy.yml  environment.yml  executor_regex_script.yml  explicit_state.yml  gcc_version.yml  hello_world.yml  invalid_buildspec_section.yml  invalid_executor.yml  invalid_tags.yml  job_dependency.yml  job_dependency_ex2.yml  job_dependency_stream.yml  maintainers_example.yml  metrics_regex.yml  (+22 more)
(+4286 files in other folders)
