cmake_minimum_required(VERSION 2.8)
include(CTest)
ENABLE_TESTING()
add_subdirectory(GCC)
add_subdirectory(git)
add_subdirectory(icc)
add_subdirectory(ifort)
add_subdirectory(OpenMPI)
add_subdirectory(MPICH)
add_subdirectory(CMake)
add_subdirectory(impi)
add_subdirectory(Python)
add_subdirectory(CUDA)
