[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "buildtest"
dynamic = ["version"]
readme = "README.rst"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Shahzeb Siddiqui", email = "shahzebmsiddiqui@gmail.com" },
]

dependencies=[
   'distro',
   'jsonschema < 4.19',
   'lmodule',
   'PyYAML >= 5.12',
   'requests',
   'rich',
   'coverage',
   'pytest',
   'black==23.3.0',
   'pyflakes',
   'urllib3 >=1.26',
]


[project.urls]
Documentation = "https://buildtest.readthedocs.io/en/latest/"
Source = "https://github.com/buildtesters/buildtest"

[tool.hatch.envs.default.scripts]
buildtest = "./bin/buildtest"

[tool.hatch.version]
path = "buildtest/__init__.py"

[project.optional-dependencies]
dev = [
    'docutils==0.16',
    'pre-commit',
    'Sphinx',
    'sphinx-design',
    'sphinx-argparse',
    'sphinx-autoapi',
    'sphinx-rtd-theme',
    'sphinxcontrib-programoutput',
    'sphinxext-remoteliteralinclude',
    'sphinx-copybutton',
    'readthedocs-sphinx-search',
    'yamllint'
]
[tool.black]
required-version = '23.3.0'
target-version = ['py38', 'py39', 'py310']
skip_magic_trailing_comma = true
line-length = 88
verbose = true

[tool.isort]
profile = 'black'
src_paths = ["buildtest", "tests", "docs"]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true

[tool.coverage.run]
parallel = true
concurrency = ["multiprocessing"]
branch = true
source = ["buildtest"]
omit = [
    'buildtest/main.py',
    'buildtest/defaults.py',
    'buildtest/__init__.py',
    'buildtest/cli/edit.py',
    'buildtest/cli/cd.py',
    'buildtest/tools/docs.py',
    'buildtest/tools/unittests.py',
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Have to re-enable the standard pragma
    'pragma: no cover',

    # Don't complain about missing debug-only code:
    'def __repr__',
    'if self\.debug',

    # Don't complain if tests don't hit defensive assertion code:
    'raise AssertionError',
    'raise NotImplementedError',

    # Don't complain if non-runnable code isn't run:
    'if 0:',
    'if False:',
    'if __name__ == .__main__.:',

    # buildtest methods that should not be coverred by regression tests
    'buildspec_find',
    'config_cmd',
    'build_history',
]
ignore_errors = true
skip_empty = true
sort = "-cover"
precision = 2

[tool.coverage.html]
directory = "htmlcov"